--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-simple-map-screenshoter",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "Leaflet plugin plugin which take screenshot of map",
   "main": "dist/leaflet-simple-map-screenshoter.js",
   "repository": {
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "prepublish": "npm run build"
+    "test-e2e": "mocha tests/runner --timeout 60000 --recursive tests/e2e",
+    "test": "npm run build && npm run test-e2e"
   },
   "keywords": [
     "leaflet",
@@ -18,7 +19,7 @@
     "screenshot",
     "image"
   ],
-  "author": "Gabdrasitov Rinat <paladin2012gnu@gmail.com>",
+  "author": "Gabdrashitov Rinat <paladin2012gnu@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/grinat/leaflet-simple-map-screenshoter/issues"
@@ -31,20 +32,28 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-2": "^6.22.0",
     "babel-plugin-transform-pipeline": "^0.1.0",
     "babel-plugin-transform-pipeline-operator": "^7.0.0-beta.3",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "canvas": "^2.3.1",
+    "chai": "^4.2.0",
     "eslint": "^4.8.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
+    "mkdirp": "^0.5.1",
+    "mocha": "^6.0.1",
+    "pixelmatch": "^4.0.2",
+    "puppeteer": "^1.12.2",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^1.0.2",
-    "rollup-watch": "^3.2.2"
+    "rollup-watch": "^3.2.2",
+    "static-server": "^2.2.1",
+    "uuid": "^3.3.2"
   }
 }
