--- a/.github/workflows/test-build-publish.yml
+++ b/.github/workflows/test-build-publish.yml
@@ -14,6 +14,8 @@ jobs:
     - uses: ianwalter/puppeteer@v4.0.0
     - name: Test
       run: |
+        node -v
+        npm -v
         npm install
         npm test
       env:
